# hepfile

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  DEV_NOTES.md  LICENSE  README.md  postBuild  pre-commit-tests.sh  pyproject.toml  requirements.txt
.binder/: postBuild  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  docs.yml  examples.yml  feature-request.yml
.github/workflows/: draft-pdf.yml  main.yml
binder/: postBuild  requirements.txt
docs/: background.rst  citations.rst  conf.py  contributors.rst  examples.rst  fundamentals.rst  hepfile.rst  index.rst  installation.rst  introduction.rst  introduction_installation.rst  introduction_overview.rst  reading.rst  requirements.txt  schema.rst  source.rst  usage.rst  writing.rst
docs/.virtual_documents/example_nb/: write_HEP.ipynb
docs/contributors/: contributors.rst
docs/example_nb/: People.csv  Vehicles.csv  add_metadata.ipynb  awkward_arrays.ipynb  converting_json_to_hepfile.ipynb  fits_tutorial.ipynb  hepfile_with_pandas.ipynb  histogram_to_hepfile.ipynb  housing.ipynb  read_hepfiles.ipynb  root_to_hepfile.ipynb  working_with_fasta_files.ipynb  write_HEP.ipynb  write_hepfiles.ipynb  write_hepfiles_from_scratch.ipynb  writing_hepfiles_from_dicts.ipynb
docs/example_rst/: write_HEP.rst
docs/examples/: examples.rst  write_HEP.rst
docs/examples/example_nb/: fits_tutorial.ipynb  histogram_to_hepfile.ipynb  housing.ipynb  json-output.json  read_hepfiles.ipynb  working_with_fasta_files.ipynb  writing_hepfiles_from_dicts.ipynb
docs/fundamentals/: fundamentals.rst  toy_example.rst
docs/introduction/: introduction.rst  introduction_installation.rst  introduction_overview.rst
docs/source/: source.rst
docs/usage/: usage.rst
examples/: awkward_example.py  csvreader.py  csvreader_long.py  cylindrical_example.py  matrix_example.py  read_h5hep.py  read_hepfile.py  read_many_hepfile.py  sandbox_testing.py  sheet3.csv  write_large_file_to_h5hep.py  write_large_file_to_hepfile.py  write_to_hepfile.py  write_to_hepfile_FOR_PROFILING.py
paper/: paper.bib  paper.md
sandbox/: debug_single_precision.ipynb  dict_to_hepfile_testing.ipynb  dict_to_hepfile_testing.ipynb.ipynb  fits-tutorial-dev.ipynb  general_python_tests.ipynb  h5py_sandbox.ipynb  hepfile_with_pandas.ipynb  histogram_to_hepfile.ipynb  play_with_awkward_arrays.ipynb  play_with_different_ways_to_store_FITS_files.ipynb  play_with_fasta.ipynb  play_with_fastq.ipynb  play_with_file_headers.ipynb  play_with_input_vs_output.ipynb  play_with_pandas_dataframes.ipynb  play_with_parallel_processing.ipynb  play_with_writing_awkward_to_hepfile.ipynb  sets_vs_lists.ipynb  test_loading_dictionary.ipynb  tests_df_tools.ipynb  timing-tests.ipynb  try_csvs_to_hepfile.ipynb  try_mp.ipynb  working_with_fasta_files.ipynb  write_hepfiles_from_scratch.ipynb
sandbox/timing_tests/: large_input_dictionary.ipynb  real_large_file_test_7GB.ipynb
src/: awkward_tools.py
src/hepfile/: __init__.py  _version.py  awkward_tools.py  constants.py  csv_tools.py  df_tools.py  dict_tools.py  errors.py  read.py  write.py
tests/: FOR_TESTS.hdf5  runtests.py  test_1_package.py  test_2_read.py  test_3_write.py  test_4_awkward_tools.py  test_5_dict_tools.py  test_6_csv_tools.py  test_7_df_tools.py  test_package.py  test_read.py  test_write.py  write_file_for_unit_tests.py
