[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hepfile"
authors = [{name = "Matt Bellis", email = "mbellis@siena.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]

requires-python = ">=3.9"

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 1 - Planning"
]

dependencies = [
  "numpy>=1.13.3",
  "h5py"
  ]

[project.urls]
Documentation = "https://hepfile.github.io"
Home = "https://github.com/mattbellis/hepfile"

[project.optional-dependencies]
pandas = ["pandas"]
awkward = ["awkward"]
learn = [
      "hepfile[pandas,awkward]",
      "astropy"
      ]
all = ["hepfile[pandas,awkward]"]

# for developers
dev = [
    "hepfile[all]",
    "pre-commit",
    "jupyter",
    "mistune",
    "pytest"
    ]

docs = [
  "hepfile[all]",
  "Sphinx>=3.0.0",
  "myst_parser>=0.13",
  "nbsphinx>=0.9.1",
  "sphinx-book-theme>=0.0.33",
  "sphinx_copybutton",
]

[tool.pytest.ini_options]
addopts = "-ra -Wd"
testpaths = ["tests"]

[tool.mypy]
files = "src"
python_version = "3.9"
warn_unused_configs = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true